channel sorting implemented

--- a/src/main/resources/META-INF/assets/css/jonglisto.less
+++ b/src/main/resources/META-INF/assets/css/jonglisto.less
@@ -58,6 +58,10 @@ table {
 	.wh(15px, 15px);
 }
 
+.iconwhsmaller {
+	.wh(12px, 12px);
+}
+
 .iconwhlarge {
 	.wh(24px, 24px);
 }	
@@ -361,6 +365,7 @@ legend {
     margin: 0; 
     padding: 0; 
     width: 100%; 
+    min-height: 20px;
 }
 
 .sortable li, .connectedSortable li { 
