- network status of configured VDR are now tested in parallel - show plugins and devices for each configured and running VDR

--- a/src/main/resources/META-INF/assets/css/jonglisto.less
+++ b/src/main/resources/META-INF/assets/css/jonglisto.less
@@ -19,6 +19,7 @@ table {
 		
 		th {
 			text-align: center;
+			vertical-align: top;
 		}
 		
 		tr {
@@ -33,12 +34,14 @@ table {
 		
 		td {
 			padding: 10px;
+			vertical-align: top;
 		}		
 	}
 }
 
 .vdrinfo {
 	display: inline-block;
+	vertical-align: top;
 }
 
 .centertop {
