--- a/src/main/resources/META-INF/assets/css/jonglisto.less
+++ b/src/main/resources/META-INF/assets/css/jonglisto.less
@@ -194,24 +194,28 @@ table {
   display: inline-block;
   max-width: 150px;
   margin-right: 10px;
+  vertical-align: top;
 }
 
 .channelName {
   display: inline-block;
   max-width: 150px;
   margin-right: 10px;
+  vertical-align: top;
 }
 
 .genre {
   display: inline-block;
   width: 150px;
   margin-right: 10px;
+  vertical-align: top;
 }
 
 .category {
   display: inline-block;
   width: 150px;
   margin-right: 10px;
+  vertical-align: top;
 }
 
 .searchtext {
