--- a/src/main/resources/vdr/jonglisto/web/components/EpgLayout.tml
+++ b/src/main/resources/vdr/jonglisto/web/components/EpgLayout.tml
@@ -7,19 +7,19 @@
                     <t:Form t:id="searchCriteria" async="true">
                         <div>
                             <div class="channelgroup">
-                                Kanalgruppe:
+                                ${message:channel_group}:
                                 <br />
-                                <t:select t:id="group" model="groups" value="epgCriteria.channelGroup" blankOption="ALWAYS" blankLabel="Alle..."
+                                <t:select t:id="group" model="groups" value="epgCriteria.channelGroup" blankOption="ALWAYS" blankLabel="${message:blank_label}"
                                     zone="epgCriteriaZone" />
                             </div>
 
                             <t:if test="${epgCriteria.channelEnabled}">
                                 <div class="channelName">
-                                    Kanal:
+                                    ${message:channel_name}:                                    
                                     <br />
                                     <t:if test="${epgCriteria.AllChannelsEnabled}">
                                         <t:select t:id="channel1" model="channelSelectModel" encoder="channelEncoder" value="epgCriteria.channel" zone="epgCriteriaZone"
-                                            blankOption="ALWAYS" blankLabel="Alle..." />
+                                            blankOption="ALWAYS" blankLabel="${message:blank_label}" />
                                         <p:else>
                                             <t:select t:id="channel2" model="channelSelectModel" encoder="channelEncoder" value="epgCriteria.channel"
                                                 zone="epgCriteriaZone" blankOption="NEVER" />
@@ -29,34 +29,34 @@
                             </t:if>
 
                             <div class="genre">
-                                Genre:
+                                ${message:genre}:
                                 <br />
-                                <t:select t:id="genre" model="genres" value="epgCriteria.genre" blankOption="ALWAYS" blankLabel="Alle..." zone="epgCriteriaZone" />
+                                <t:select t:id="genre" model="genres" value="epgCriteria.genre" blankOption="ALWAYS" blankLabel="${message:blank_label}" zone="epgCriteriaZone" />
                             </div>
 
                             <div class="category">
-                                Kategorie:
+                                ${message:category}:
                                 <br />
-                                <t:select t:id="category" model="categories" value="epgCriteria.category" blankOption="ALWAYS" blankLabel="Alle..."
+                                <t:select t:id="category" model="categories" value="epgCriteria.category" blankOption="ALWAYS" blankLabel="${message:blank_label}"
                                     zone="epgCriteriaZone" />
                             </div>
 
                             <div class="searchtext">
-                                Stichwort:
+                                ${message:keyword}:                                
                                 <br />
                                 <t:TextField t:id="text" value="epgCriteria.searchText" size="20" />
-                                <t:submit t:id="searchText" value="Search" />&nbsp;
-                                <t:submit t:id="resetText" value="Löschen" />
+                                <t:submit t:id="searchText" value="${message:search}" />&nbsp;
+                                <t:submit t:id="resetText" value="${message:delete}" />
                             </div>
 
 
                             <t:if test="${epgCriteria.timeEnabled}">
                                 <div class="searchtime">
-                                    Uhrzeit:
+                                    ${message:time}:                                    
                                     <br />
                                     <t:TextField t:id="textTime" value="timeStr" size="6" validate="regexp=^[0-9]{2}:[0-9]{2}$" />
-                                    <t:submit t:id="searchTime" value="Search" />&nbsp;
-                                    <t:submit t:id="resetTime" value="Löschen" />
+                                    <t:submit t:id="searchTime" value="${message:search}" />&nbsp;
+                                    <t:submit t:id="resetTime" value="${message:delete}" />
                                 </div>
                             </t:if>
                         </div>
