--- a/src/main/resources/vdr/jonglisto/web/components/Epg.tml
+++ b/src/main/resources/vdr/jonglisto/web/components/Epg.tml
@@ -14,7 +14,7 @@
                                     <div class="row col-md-36 epg-header ">
                                         <div class="col-md-30">
                                             <t:ChannelImage channelName="${channelName}" />
-                                            ${map:epg['v_longstartdate']}, ${map:epg['v_starttime']} - ${map:epg['v_endtime']} , Dauer: ${map:epg['v_duration']}
+                                            ${map:epg['v_longstartdate']}, ${map:epg['v_starttime']} - ${map:epg['v_endtime']} , ${message:duration}: ${map:epg['v_duration']}
                                         </div>
                                         <div class="col-md-6">
                                             <t:if test="timer">
@@ -63,30 +63,30 @@
 
                                                         <t:if test="${map:epg['season']}">
                                                             <div class="row col-md-36 epg-data">
-                                                                <strong>Staffel:</strong>
+                                                                <strong>${message:season}:</strong>
                                                                 ${map:epg['season']},
-                                                                <strong>Staffelfolge:</strong>
+                                                                <strong>${message:part}:</strong>
                                                                 ${map:epg['part']}/${map:epg['parts']},
-                                                                <strong>Folge:</strong>
+                                                                <strong>${message:episode}:</strong>
                                                                 ${map:epg['number']}
                                                             </div>
                                                         </t:if>
 
                                                         <t:if test="${map:epg['series_status']}">
                                                             <div class="row col-md-36 epg-data">
-                                                                <strong>Status:</strong>
+                                                                <strong>${message:status}:</strong>
                                                                 ${map:epg['series_status']}
                                                             </div>
                                                         </t:if>
 
                                                         <div class="row col-md-36 epg-data">
                                                             <t:if test="${map:epg['genre']}">
-                                                                <strong>Genre:</strong>
+                                                                <strong>${message:genre}:</strong>
                                                                 ${map:epg['genre']},
                                                             </t:if>
 
                                                             <t:if test="${map:epg['category']}">
-                                                                <strong>Kategorie:</strong>
+                                                                <strong>${message:category}:</strong>
                                                                 ${map:epg['category']},
                                                             </t:if>
 
@@ -103,12 +103,12 @@
                                                             </t:if>
 
                                                             <t:if test="${map:epg['parentalrating']}">
-                                                                <strong>FSK:</strong>
+                                                                <strong>${message:parental_rating}:</strong>
                                                                 ${map:epg['parentalrating']}
                                                             </t:if>
 
                                                             <t:if test="${map:epg['series_network']}">
-                                                                <strong>Network</strong>
+                                                                <strong>${message:network}</strong>
                                                                 :
                                                                 ${map:epg['series_network']}
                                                             </t:if>
@@ -134,106 +134,106 @@
 
                                                         <t:if test="${map:epg['series_overview']}">
                                                             <div class="row col-md-36 epg-data">
-                                                                <strong>Serienübersicht:</strong>
+                                                                <strong>${message:series_overview}:</strong>
                                                                 ${map:epg['series_overview']}
                                                             </div>
                                                         </t:if>
 
                                                         <t:if test="${map:epg['actor']}">
                                                             <div class="row col-md-36 epg-data">
-                                                                <strong>Darsteller:</strong>
+                                                                <strong>${message:actor}:</strong>
                                                                 ${map:epg['actor']}
                                                             </div>
                                                         </t:if>
 
                                                         <t:if test="${map:epg['director']}">
                                                             <div class="row col-md-36 epg-data">
-                                                                <strong>Regie:</strong>
+                                                                <strong>${message:director}:</strong>
                                                                 ${map:epg['director']}
                                                             </div>
                                                         </t:if>
 
                                                         <t:if test="${map:epg['audio']}">
                                                             <div class="row col-md-36 epg-data">
-                                                                <strong>Audio:</strong>
+                                                                <strong>${message:audio}:</strong>
                                                                 ${map:epg['audio']}
                                                             </div>
                                                         </t:if>
 
                                                         <t:if test="${map:epg['flags']}">
                                                             <div class="row col-md-36 epg-data">
-                                                                <strong>Flags:</strong>
+                                                                <strong>${message:flags}:</strong>
                                                                 ${map:epg['flags']}
                                                             </div>
                                                         </t:if>
 
                                                         <t:if test="${map:epg['shortreview']}">
                                                             <div class="row col-md-36 epg-data">
-                                                                <strong>Kurzreview:</strong>
+                                                                <strong>${message:shortreview}:</strong>
                                                                 ${map:epg['shortreview']}
                                                             </div>
                                                         </t:if>
 
                                                         <t:if test="${map:epg['tipp']}">
                                                             <div class="row col-md-36 epg-data">
-                                                                <strong>Bewertung:</strong>
+                                                                <strong>${message:tipp}:</strong>
                                                                 ${map:epg['tipp']}
                                                             </div>
                                                         </t:if>
 
                                                         <div class="row col-md-36 epg-data">
                                                             <t:if test="${map:epg['rating']}">
-                                                                <strong>Rating:</strong>
+                                                                <strong>${message:rating}:</strong>
                                                                 ${map:epg['rating']}
                                                             </t:if>
 
                                                             <t:if test="${map:epg['series_rating']}">
-                                                                <strong>IMDb Rating Serie:</strong>
+                                                                <strong>${message:imdb_rating_series}:</strong>
                                                                 ${map:epg['series_rating']}
                                                             </t:if>
 
                                                             <t:if test="${map:epg['episode_rating']}">
-                                                                <strong>IMDb Rating Folge:</strong>
+                                                                <strong>${message:imdb_rating_episode}:</strong>
                                                                 ${map:epg['episode_rating']}
                                                             </t:if>
 
                                                             <t:if test="${map:epg['movie_vote_average']}">
-                                                                <strong>IMDb Rating:</strong>
+                                                                <strong>${message:imdb_rating}:</strong>
                                                                 ${map:epg['movie_vote_average']}
                                                             </t:if>
                                                         </div>
 
                                                         <t:if test="${map:epg['moderator']}">
                                                             <div class="row col-md-36 epg-data">
-                                                                <strong>Moderator:</strong>
+                                                                <strong>${message:moderator}:</strong>
                                                                 ${map:epg['moderator']}
                                                             </div>
                                                         </t:if>
 
                                                         <t:if test="${map:epg['other']}">
                                                             <div class="row col-md-36 epg-data">
-                                                                <strong>Andere:</strong>
+                                                                <strong>${message:other}:</strong>
                                                                 ${map:epg['other']}
                                                             </div>
                                                         </t:if>
 
                                                         <t:if test="${map:epg['guest']}">
                                                             <div class="row col-md-36 epg-data">
-                                                                <strong>Gäste:</strong>
+                                                                <strong>${message:guests}:</strong>
                                                                 ${map:epg['guest']}
                                                             </div>
                                                         </t:if>
 
                                                         <t:if test="${map:epg['camera']}">
                                                             <div class="row col-md-36 epg-data">
-                                                                <strong>Kamera:</strong>
+                                                                <strong>${message:camera}:</strong>
                                                                 ${map:epg['camera']}
                                                             </div>
                                                         </t:if>
 
                                                         <t:if test="${map:epg['merge']}">
                                                             <div class="row col-md-36 epg-data">
-                                                                <strong>Quelle:</strong>
+                                                                <strong>${message:source}:</strong>
                                                                 ${map:epg['merge']}
                                                             </div>
                                                         </t:if>
@@ -242,42 +242,42 @@
                                             </t:tab>
 
                                             <t:if test="isMediaTypeAvailable('Banner')">
-                                                <t:tab name="banner" label="Banner">
+                                                <t:tab name="banner" label="${message:banner}">
                                                     <t:trigger event="reloadEpgImagesBanner" />
                                                     <t:delegate to="block:viewImages" />
                                                 </t:tab>
                                             </t:if>
 
                                             <t:if test="isMediaTypeAvailable('Poster')">
-                                                <t:tab name="poster" label="Poster">
+                                                <t:tab name="poster" label="${message:poster}">
                                                     <t:trigger event="reloadEpgImagesPoster" />
                                                     <t:delegate to="block:viewImages" />
                                                 </t:tab>
                                             </t:if>
 
                                             <t:if test="isMediaTypeAvailable('SeasonPoster')">
-                                                <t:tab name="seasonPoster" label="Serien Poster">
+                                                <t:tab name="seasonPoster" label="${message:series_poster}">
                                                     <t:trigger event="reloadEpgImagesSeasonPoster" />
                                                     <t:delegate to="block:viewImages" />
                                                 </t:tab>
                                             </t:if>
 
                                             <t:if test="isMediaTypeAvailable('FanArt')">
-                                                <t:tab name="fanArt" label="Fan Art">
+                                                <t:tab name="fanArt" label="${message:fan_art}">
                                                     <t:trigger event="reloadEpgImagesFanArt" />
                                                     <t:delegate to="block:viewImages" />
                                                 </t:tab>
                                             </t:if>
 
                                             <t:if test="isMediaTypeAvailable('EpisodePic')">
-                                                <t:tab name="episodePic" label="Episodenbilder">
+                                                <t:tab name="episodePic" label="${message:episode_pics}">
                                                     <t:trigger event="reloadEpgImagesEpisodePic" />
                                                     <t:delegate to="block:viewImages" />
                                                 </t:tab>
                                             </t:if>
 
                                             <t:if test="isMediaTypeAvailable('Actor')">
-                                                <t:tab name="actor" label="Schauspieler">
+                                                <t:tab name="actor" label="${message:actor}">
                                                     <t:trigger event="reloadEpgImagesActor" />
                                                     <t:delegate to="block:viewActorImages" />
                                                 </t:tab>
