--- a/src/main/resources/vdr/jonglisto/web/components/Navbar.tml
+++ b/src/main/resources/vdr/jonglisto/web/components/Navbar.tml
@@ -19,7 +19,7 @@
             <br />
             <br />
             <ul class="nav nav-stacked nav-pills">
-                <li>Developer-Seiten</li>
+                <li>${message:developer_pages}</li>
                 <li>
                     <t:pageLink page="t5dashboard">Dashboard</t:pageLink>
                 </li>
