--- a/src/main/resources/vdr/jonglisto/web/components/Recordings.tml
+++ b/src/main/resources/vdr/jonglisto/web/components/Recordings.tml
@@ -38,15 +38,15 @@
                                         include="recStartDate,recStartTime,duration,fileSize, name" add="action, select" rowsPerPage="2048" t:mixins="EnableGridZone">
                                         <p:actionCell>
                                             <t:eventlink t:event="renameRecording" t:context="[recording.fileName,recording.name]" zone="^">
-                                                <img src="${asset:edit.svg}" alt="Aufnahme umbenennen" class="iconwh" />
+                                                <img src="${asset:edit.svg}" alt="${message:rename_recording}" class="iconwh" />
                                             </t:eventlink> &nbsp;
 
                                             <t:eventlink t:event="moveRecording" t:context="recording.fileName" zone="^">
-                                                <img src="${asset:rename.svg}" alt="Aufnahme verschieben" class="iconwh" />
+                                                <img src="${asset:rename.svg}" alt="${message:move_recording}" class="iconwh" />
                                             </t:eventlink> &nbsp;
 
                                             <t:eventlink t:event="deleteRecording" t:context="recording.fileName" zone="^">
-                                                <img src="${asset:delete.svg}" alt="Aufnahme löschen" class="iconwh" />
+                                                <img src="${asset:delete.svg}" alt="${message:delete_recording}" class="iconwh" />
                                             </t:eventlink>
                                         </p:actionCell>
 
@@ -61,16 +61,16 @@
                                                 <t:hidden value="renameFilename" />
                                                 <t:textfield t:id="renameName" validate="required" size="30" />
                                                 <br />
-                                                <t:linksubmit t:event="saveRename">Speichern</t:linksubmit>&nbsp;
-                                                <t:linksubmit t:event="cancelRename">Abbrechen</t:linksubmit>
+                                                <t:linksubmit t:event="saveRename">${message:save}</t:linksubmit>&nbsp;
+                                                <t:linksubmit t:event="cancelRename">${message:cancel}</t:linksubmit>
                                             </t:if>
 
                                             <t:if test="moveThis()">
                                                 <t:hidden value="moveFilename" />
                                                 <t:textfield t:id="targetDirSingle" validate="required" size="30" />
                                                 <br />
-                                                <t:linksubmit t:event="saveMove">Verschieben</t:linksubmit>&nbsp;
-                                                <t:linksubmit t:event="cancelMove">Abbrechen</t:linksubmit>
+                                                <t:linksubmit t:event="saveMove">${message:move}</t:linksubmit>&nbsp;
+                                                <t:linksubmit t:event="cancelMove">${message:cancel}</t:linksubmit>
                                             </t:if>
 
                                         </p:nameCell>
@@ -124,17 +124,17 @@
 
                                     <div class="col-sm-36">
                                         <div class="col-sm-9">
-                                            Ausgewählte Aufnahmen
+                                            ${message:selected_recordings}                                            
                                         </div>
 
                                         <div class="col-sm-6">
                                             <img src="${asset:delete.svg}" alt="Aufnahmen löschen" class="deleteicon" />
-                                            <t:linksubmit t:event="deleteRecordings">löschen</t:linksubmit>
+                                            <t:linksubmit t:event="deleteRecordings">${message:delete}</t:linksubmit>
                                         </div>
 
                                         <div class="col-sm-21">
                                             <img src="${asset:rename.svg}" alt="Aufnahme verschieben" class="moveicon" />
-                                            <t:linksubmit t:event="moveRecordings">verschieben nach</t:linksubmit>
+                                            <t:linksubmit t:event="moveRecordings">${message:move_to}</t:linksubmit>
 
                                             <t:textfield t:id="targetDir" size="30" />
                                         </div>
