--- a/src/main/resources/vdr/jonglisto/web/components/SearchTimerResult.tml
+++ b/src/main/resources/vdr/jonglisto/web/components/SearchTimerResult.tml
@@ -2,7 +2,7 @@
     <t:content>
         <t:zone t:id="epgListZone" id="epgListZone">
             <div class="row">
-                <strong>Anzahl der Suchergebnisse: ${count}</strong>
+                <strong>${message:search_count}: ${count}</strong>
                 <br />
             </div>
 
@@ -18,10 +18,6 @@
                 <p:channelidCell>
                     <t:ChannelImage channelName="channelName" />
                 </p:channelidCell>
-
-                <!-- <p:actionCell> <t:pagelink page="timer" parameters="{'newTimerUseId':useId, 'channelName':channelName}"> <img src="${asset:record.svg}" alt="Record 
-                    Timer" data-toggle="tooltip" title="Timer anlegen" class="iconwhlarge tooltipTop" /> </t:pagelink> <t:eventlink t:event="switchChannel" context="channelId"> <img 
-                    src="${asset:umschalten.svg}" alt="Channel Switch" data-toggle="tooltip" title="TV umschalten" class="iconwhlarge tooltipTop" /> </t:eventlink> </p:actionCell> -->
             </t:grid>
         </t:zone>
 
