--- a/src/main/resources/vdr/jonglisto/web/components/SvdrpConsole.tml
+++ b/src/main/resources/vdr/jonglisto/web/components/SvdrpConsole.tml
@@ -12,7 +12,7 @@
                         </div>
 
                         <div class="col-sm-20">
-                            <t:TextField id="svdrpinput" t:id="svdrpinput" value="svdrpCommand" label="message:svdrp_input" size="150" />
+                            <t:TextField id="svdrpinput" t:id="svdrpinput" value="svdrpCommand" label="${message:svdrp_input}" size="150" />
                         </div>
 
                         <div class="col-sm-3">
@@ -21,7 +21,7 @@
                     </div>
 
                     <div class="form-group row">
-                        <strong>Ausgabe</strong>
+                        <strong>${message:output}</strong>
                     </div>
 
                     <div class="form-group row scrollable" id="svdrpconsole">
